export interface Passenger {
  firstname: string;
  surname: string;
  dateOfBirth: string;
  phoneNumber: string;
  email: string;
  pesel: string;
}
