@startuml entities

class Airport {
  __ attributes __
  - id: int
  - iata: String
  - icao: String
  - airportName: String
  - city: String
  - country: String
  - coordinates: Point
  - timezone: int
}

class Airline {
  __ attributes __
  - id: int
  - iata: String
  - icao: String
  - name: String
  // more properties, like calculator, restriction etc.
}

class Route {
  __ attributes __
  - routeId: int
  - srcAirportCode: String
  - dstAirportCode: String
  - connections: Array<Connection>
}

class Connection {
  __ attributes __
  - connectionId: int
  - airline: String
  - srcAirport: String
  - dstAirport: String
}

class Flight {
  __ attributes __
  - flightId: int
  - connection: Connection
  - peopleCapacity: int
  - departureDate: Date
  - arrivalDate: Date
}

class Ticket {
  __ attributes __
  - ticketId: int
  - flight: Flight
  - passenger: Passenger
  - purchaseDate: Date
  - flightClass: String
  - seatNumber: int
  - maxLuggageWeight: double
  - price: Price
  // maybe more parameters
}

class Passenger {
  __ attributes __
  -firstname: String
  -surname: String
  -dateOfBirth: Date
  -phoneNumber: String
  -email: String
  -idOrPesel: String
}

class Trip {
  __ attributes __
  - id: int
  - oneWayTrip: boolean
  - tickets: Array<Ticket>
  - departureDate: Date
  - arrivalDate: Date
  - totalPrice: Price
}

Route --.> Airport
Route --.> Airline
Route o-- Connection
Connection --.> Airline
Connection --.> Airport
Flight o-- Connection
Ticket o-- Flight
Ticket *-- Passenger
Trip *-- Ticket

@enduml